# stirtest-1

src/: Dockerfile.txt  config.json  requirements.txt  rundocker.sh
src/LightGlue/lightglue.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/STIRLoader/4/: calib.json
src/datatest/: calculate_error_from_json2d.py  csrt.py  executes.py  flow2d.py  flow3d.py  mft.py  raft.py
src/datatest/MFT/: config.py  pyproject.toml  readme.md
src/datatest/MFT/MFT_files/configs/: MFT_cfg.py
src/datatest/MFT/MFT_files/configs/flow/: RAFTou_kubric_huber_split_nonoccl.py
src/datatest/backUp/: flow2d_origin.py
